[package]
name = "protohackers"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "smoke-test"
path = "src/bin/smoke-test.rs"

[[bin]]
name = "prime-time"
path = "src/bin/prime-time.rs"

[[bin]]
name = "mean-end"
path = "src/bin/mean-end.rs"

[[bin]]
name = "budget-chat"
path = "src/bin/budget-chat.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
console-subscriber = "0.3.0"
is_prime = "2.0.9"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["full", "macros", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
